# edge-console

./: .gitignore  .npmrc  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.sh  config.schema.json  eslint.config.mjs  gdk-config.json  package.json  recipe.yaml  tsconfig.base.json
.github/workflows/: ci.yml
docs/: FULL-SYSTEM-TEST.md  README.md  explanation.md  how-to-guides.md  mockups-hifi.html  sample-configurations.md  tutorial.md  user-guide.md
docs/design/: APP-WEBSOCKET-PROTOCOL.md  DESIGN.md  FULL-SYSTEM-TEST.md  PHASE3-DESCRIPTOR-PANELS.md  UI-GAP-ANALYSIS.md  UNS-RECONCILIATION-AND-PHASE1-PLAN.md  mockups-hifi.html  wireframes-lofi.html
docs/reference/: configuration.md  data-types.md  messaging-interface.md  metrics.md
experiments/gemba/: DESIGN.md  README.md  RESULTS.md  burst-local.json  dallas-local.json  publish_burst.py  tv-local.json  verify-tv.mjs  verify.mjs
gateway/: Cargo.toml
gateway/src/: command.rs  config.rs  gemba.rs  http.rs  ingress.rs  lib.rs  main.rs  model.rs  protocol.rs  self_vitals.rs
protocol/: package.json
protocol/src/: index.ts
protocol/test/: protocol-ws.test.ts
scripts/: demo-gateway.mjs  link-sibling-lib.mjs  link-sibling-rust.mjs
server/: package.json  vitest.config.ts
server/src/: console-app.ts  console-config.ts  main.ts
server/test/: _fakes.ts  alarm-tracker.test.ts  attribute-store.test.ts  bus-ingress.test.ts  command-gateway.test.ts  config-store.test.ts  console-app.test.ts  console-config.test.ts  console-self.test.ts  console-settings.test.ts  event-store.test.ts  fleet-model.test.ts  log-store.test.ts  metric-store.test.ts  normalizer.test.ts  protocol-ws.test.ts  rbac.test.ts  signal-store.test.ts  throughput-meter.test.ts  ws-delta-buffer.test.ts  ws-gateway-activity.test.ts  ws-gateway-command.test.ts  ws-gateway-config.test.ts  ws-gateway-r0.test.ts  ws-gateway-settings.test.ts  ws-gateway.test.ts  ws-server-static.test.ts  ws-server.test.ts
test-configs/: config.json  dallas-site.json
ui/: index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
ui/src/: App.tsx  config.ts  index.scss  main.tsx
ui/test/: _fixtures.ts  _setup.ts  activity-client.test.ts  alarm-selectors.test.ts  alarm-store.test.ts  app.test.tsx  appbar.test.tsx  attribute-store.test.ts  attributes-client.test.ts  client.test.ts  command-client.test.ts  command-controls.test.tsx  command-store.test.ts  command-toasts.test.tsx  component-detail-view.test.tsx  components-tree.test.ts  components-view.test.tsx  config-client.test.ts  config-review-view.test.tsx  config-selectors.test.ts  config-store.test.ts  config.test.ts  detail-selectors.test.ts  edge-health-view.test.tsx  event-log-store.test.ts  events-selectors.test.ts  events-view.test.tsx  grouping.test.ts  log-store.test.ts  metric-series-store.test.ts  metric-store.test.ts  metrics-view.test.tsx  (+13 more)
(+117 files in other folders)
