[package]
name = "edge-console-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Rust EdgeCommons gateway for the Edge Console React UI"

[[bin]]
name = "edge-console-gateway"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["ws"] }
bytes = "1"
edgecommons = { path = "../local/edgecommons-rust", default-features = false, features = ["standalone"] }
futures-util = "0.3"
mime_guess = "2"
mimalloc = "0.1"
percent-encoding = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.39"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time", "fs"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3"

